name:                fresnel-asn1
version:             0.1.0.0
synopsis:            Fresnel grammar for parsing ASN.1
description:         ...

homepage:            https://github.com/frasertweedal/hs-fresnel-asn1
bug-reports:         https://github.com/frasertweedal/hs-fresnel-asn1/issues
license:             AGPL-3
license-file:        agpl-3.0.txt
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2015  Fraser Tweedale
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-fresnel-asn1

library
  exposed-modules:
    Data.ASN1.Fresnel
  other-modules:
    Data.ASN1.Test
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -Wall

  build-depends:
    base >= 4 && < 5
    , asn1-encoding
    , asn1-types
    , bytestring
    , containers
    , fresnel
    , hourglass
    , lens
    , safe
    , semigroups

  if impl(ghc < 7.10)
    build-depends: nats
